--- a/Keep Fit/Base.lproj/Main.storyboard
+++ b/Keep Fit/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="niD-9H-6SQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="niD-9H-6SQ">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
@@ -1224,6 +1224,10 @@
                                                     <action selector="viewSelectorAction:" destination="u7R-gc-2Mv" eventType="valueChanged" id="uM3-Zp-PPq"/>
                                                 </connections>
                                             </segmentedControl>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="Aqa-SF-CWq">
+                                                <rect key="frame" x="24" y="8" width="90" height="90"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
@@ -1268,6 +1272,7 @@
                         <outlet property="autoStepSpinner" destination="Xaf-5e-FVD" id="VSU-6b-DlT"/>
                         <outlet property="datesView" destination="wxe-Of-0dD" id="ERe-So-yfF"/>
                         <outlet property="estimatedCompletionLabel" destination="Fcp-dr-hv7" id="URU-Eg-0hJ"/>
+                        <outlet property="imageView" destination="Aqa-SF-CWq" id="sre-aa-AYp"/>
                         <outlet property="mainDetailsView" destination="awa-ox-Nbs" id="lu5-l9-E42"/>
                         <outlet property="outletActiveButton" destination="2X8-Fv-u9Q" id="bB9-Ps-XlL"/>
                         <outlet property="outletHistoryButton" destination="PF5-7o-L4h" id="Qw0-Pe-pgq"/>
